add summary table

--- a/nlp/notebooks/tables.ipynb
+++ b/nlp/notebooks/tables.ipynb
@@ -324,6 +324,271 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combined Table (Paper Version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import re\n",
+    "import pandas.io.formats.style\n",
+    "\n",
+    "\n",
+    "measure_to_abbrv = {\n",
+    "    \"AlignedCosineSimilarity\": \"AlignCos\",\n",
+    "    \"CKA\": \"CKA\",\n",
+    "    \"ConcentricityDifference\": \"ConcDiff\",\n",
+    "    \"DistanceCorrelation\": \"DistCorr\",\n",
+    "    \"EigenspaceOverlapScore\": \"EOS\",\n",
+    "    \"GeometryScore\": \"GS\",\n",
+    "    \"Gulp\": \"GULP\",\n",
+    "    \"HardCorrelationMatch\": \"HardCorr\",\n",
+    "    \"IMDScore\": \"IMD\",\n",
+    "    \"JaccardSimilarity\": \"Jaccard\",\n",
+    "    \"LinearRegression\": \"LinReg\",\n",
+    "    \"MagnitudeDifference\": \"MagDiff\",\n",
+    "    \"OrthogonalAngularShapeMetricCentered\": \"AngShape\",\n",
+    "    \"OrthogonalProcrustesCenteredAndNormalized\": \"OrthProc\",\n",
+    "    \"PWCCA\": \"PWCCA\",\n",
+    "    \"PermutationProcrustes\": \"PermProc\",\n",
+    "    \"ProcrustesSizeAndShapeDistance\": \"ProcDist\",\n",
+    "    \"RSA\": \"RSA\",\n",
+    "    \"RSMNormDifference\": \"RSMDiff\",\n",
+    "    \"RankSimilarity\": \"RankSim\",\n",
+    "    \"SVCCA\": \"SVCCA\",\n",
+    "    \"SecondOrderCosineSimilarity\": \"2nd-Cos\",\n",
+    "    \"SoftCorrelationMatch\": \"SoftCorr\",\n",
+    "    \"UniformityDifference\": \"UnifDiff\"\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_dfs = []\n",
+    "nlp_root = Path(\"/root/similaritybench/experiments/paper_results/nlp\")\n",
+    "for path in nlp_root.iterdir():\n",
+    "    df = pd.read_csv(path, index_col=0)\n",
+    "    setting = path.name.split(\"_\")[0]\n",
+    "\n",
+    "    pattern = r'(?<=_)sst2(?=_)|(?<=_)mnli(?=_)'\n",
+    "    match = re.search(pattern, path.name)\n",
+    "    assert match is not None\n",
+    "    dataset = match.group(0)\n",
+    "\n",
+    "    df[\"Setting\"] = setting\n",
+    "    df[\"Dataset\"] = dataset\n",
+    "    cleaned_dfs.append(df)\n",
+    "\n",
+    "data = pd.concat(cleaned_dfs).reset_index(drop=True)\n",
+    "data = data.rename(columns={\"functional_similarity_measure\": \"Functional Similarity Measure\", \"similarity_measure\": \"Representational Similarity Measure\", \"quality_measure\": \"Quality Measure\"})\n",
+    "\n",
+    "idx = data.Setting == \"correlation\"\n",
+    "data.loc[idx, \"value\"] = data.loc[idx, \"corr\"]\n",
+    "\n",
+    "idx = (data.Setting == \"correlation\") & (data[\"Functional Similarity Measure\"] == \"AbsoluteAccDiff\")\n",
+    "data.loc[idx, \"Setting\"] = \"acc_corr\"\n",
+    "\n",
+    "idx = (data.Setting == \"correlation\") & (data[\"Functional Similarity Measure\"] != \"JSD\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "idx = (data.Setting.isin([\"aug\", \"mem\", \"sc\"])) & (data[\"Quality Measure\"] != \"AUPRC\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "idx = (data.Setting.isin([\"correlation\", \"acc_corr\"])) & (data[\"Quality Measure\"] != \"spearmanr\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "idx = (data.Setting.isin([\"mono\"])) & (data[\"Quality Measure\"] != \"correlation\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "nlp_data = data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_dfs = []\n",
+    "root = Path(\"/root/similaritybench/experiments/paper_results/graph\")\n",
+    "for path in root.iterdir():\n",
+    "    df = pd.read_csv(path, index_col=0)\n",
+    "    pattern = r\"augmentation|label_test|layer_test|output_correlation|shortcut\"\n",
+    "    match = re.search(pattern, path.name)\n",
+    "    pattern_to_setting = {\n",
+    "        \"augmentation\": \"aug\",\n",
+    "        \"label_test\": \"mem\",\n",
+    "        \"layer_test\": \"mono\",\n",
+    "        \"output_correlation\": \"correlation\",\n",
+    "        \"shortcut\": \"sc\",\n",
+    "    }\n",
+    "    setting = pattern_to_setting[match.group(0)]\n",
+    "\n",
+    "    pattern = r\"(?<=_)cora(?=_)|(?<=_)flickr(?=_)|(?<=_)ogbn-arxiv(?=_)\"\n",
+    "    match = re.search(pattern, path.name)\n",
+    "    assert match is not None\n",
+    "    dataset = match.group(0)\n",
+    "\n",
+    "    df[\"Setting\"] = setting\n",
+    "    df[\"Dataset\"] = dataset\n",
+    "    cleaned_dfs.append(df)\n",
+    "\n",
+    "data = pd.concat(cleaned_dfs).reset_index(drop=True)\n",
+    "data = data.rename(\n",
+    "    columns={\n",
+    "        \"functional_similarity_measure\": \"Functional Similarity Measure\",\n",
+    "        \"similarity_measure\": \"Representational Similarity Measure\",\n",
+    "        \"quality_measure\": \"Quality Measure\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "idx = data.Setting == \"correlation\"\n",
+    "data.loc[idx, \"value\"] = data.loc[idx, \"corr\"]\n",
+    "\n",
+    "idx = (data.Setting == \"correlation\") & (data[\"Functional Similarity Measure\"] == \"AbsoluteAccDiff\")\n",
+    "data.loc[idx, \"Setting\"] = \"acc_corr\"\n",
+    "\n",
+    "idx = (data.Setting == \"correlation\") & (data[\"Functional Similarity Measure\"] != \"JSD\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "idx = (data.Setting.isin([\"aug\", \"mem\", \"sc\"])) & (data[\"Quality Measure\"] != \"AUPRC\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "idx = (data.Setting.isin([\"correlation\", \"acc_corr\"])) & (data[\"Quality Measure\"] != \"spearmanr\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "idx = (data.Setting.isin([\"mono\"])) & (data[\"Quality Measure\"] != \"correlation\")\n",
+    "data = data.loc[~idx]\n",
+    "\n",
+    "graph_data = data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vision_data = nlp_data.copy()\n",
+    "vision_data.loc[:, \"domain\"] = \"VISION\"\n",
+    "data = pd.concat([nlp_data, graph_data, vision_data])\n",
+    "print(data.columns)\n",
+    "\n",
+    "data.loc[:, \"Representational Similarity Measure\"] = data[\"Representational Similarity Measure\"].map(measure_to_abbrv)\n",
+    "data.loc[:, \"architecture\"] = data[\"architecture\"].map(\n",
+    "    {\"BERT-L\": \"BERT\", \"GCN\": \"GCN\", \"GAT\": \"GAT\", \"GraphSAGE\": \"SAGE\"}\n",
+    ")\n",
+    "data.loc[:, \"domain\"] = data[\"domain\"].map(\n",
+    "    {\"NLP\": \"Text\", \"GRAPHS\": \"Graph\", \"VISION\": \"Vision\"}\n",
+    ")\n",
+    "data.loc[:, \"Dataset\"] = data[\"Dataset\"].map(\n",
+    "    {\n",
+    "        \"mnli_aug_rate0\": \"MNLI\",\n",
+    "        \"mnli_mem_rate0\": \"MNLI\",\n",
+    "        \"mnli\": \"MNLI\",\n",
+    "        \"sst2_sc_rate0558\": \"SST2\",\n",
+    "        \"sst2_mem_rate0\": \"SST2\",\n",
+    "        \"mnli_sc_rate0354\": \"MNLI\",\n",
+    "        \"sst2_aug_rate0\": \"SST2\",\n",
+    "        \"sst2\": \"SST2\",\n",
+    "        \"flickr\": \"flickr\",\n",
+    "        \"ogbn-arxiv\": \"arXiv\",\n",
+    "        \"cora\": \"Cora\",\n",
+    "    }\n",
+    ")\n",
+    "data.loc[:, \"Setting\"] = data[\"Setting\"].map(\n",
+    "    {\n",
+    "        \"aug\": \"Augmentation\",\n",
+    "        \"mem\": \"Random Labels\",\n",
+    "        \"correlation\": \"JSD Corr.\",\n",
+    "        \"acc_corr\": \"Acc Corr.\",\n",
+    "        \"mono\": \"Layer Mono.\",\n",
+    "        \"sc\": \"Shortcuts\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "column_order = [\"Augmentation\", \"Random Labels\", \"Shortcuts\", \"JSD Corr.\", \"Acc Corr.\", \"Layer Mono.\"]\n",
+    "data.loc[:, \"Setting\"] = pd.Categorical(\n",
+    "    data[\"Setting\"],\n",
+    "    categories=column_order,\n",
+    "    ordered=True,\n",
+    ")\n",
+    "data = data.rename(\n",
+    "    columns={\n",
+    "        \"domain\": \"Modality\",\n",
+    "        \"architecture\": \"Arch.\",\n",
+    "        \"Representational Similarity Measure\": \"Sim Meas.\",\n",
+    "        \"Quality Measure\": \"Eval.\",\n",
+    "        \"Setting\": \"Scenario\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# Data Selection for Overview Table\n",
+    "idx = data[\"Dataset\"].isin([\"MNLI\", \"flickr\"]) & data[\"Arch.\"].isin([\"SAGE\", \"BERT\"])\n",
+    "\n",
+    "pivot = pd.pivot_table(\n",
+    "    data.loc[idx],\n",
+    "    index=\"Sim Meas.\",\n",
+    "    columns=[\"Scenario\", \"Eval.\", \"Modality\", \"Dataset\", \"Arch.\"],\n",
+    "    values=\"value\",\n",
+    ")\n",
+    "pivot = pivot.sort_values(by=\"Sim Meas.\")\n",
+    "pivot = pivot.reindex(column_order, axis=\"columns\", level=\"Scenario\")\n",
+    "pivot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "styled = pd.io.formats.style.Styler(\n",
+    "    pivot,\n",
+    "    precision=2,\n",
+    "    caption=\"Full Results.\",\n",
+    ")\n",
+    "\n",
+    "latex_str = styled.to_latex(hrules=True, position=\"t\", label=\"tab:result_overview\", )\n",
+    "latex_str = latex_str.split(\"\\n\")\n",
+    "\n",
+    "# Center headers\n",
+    "pattern = r'\\{r\\}'\n",
+    "replacement = r'{c}'\n",
+    "latex_str = [re.sub(pattern, replacement, line) if i in [5, 6] else line for i, line in enumerate(latex_str) ]\n",
+    "\n",
+    "# Add vertical bars\n",
+    "line_no = 3\n",
+    "mod_line = latex_str[line_no][:17] + \"\".join([\"|rrr\"] * 6) + \"}\"\n",
+    "latex_str[line_no] = mod_line\n",
+    "\n",
+    "latex_str = [r\"\\rowcolor{Gray}\" + line  if i>=12 and (i-12)%2==0 else line for i, line in enumerate(latex_str[:-4])] + latex_str[-4:]\n",
+    "latex_str = \"\\n\".join(latex_str)\n",
+    "print(latex_str)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
