final updates to tables and figures for submission

--- a/nlp/notebooks/tables.ipynb
+++ b/nlp/notebooks/tables.ipynb
@@ -439,14 +439,14 @@
     "root = Path(\"/root/similaritybench/experiments/paper_results/vision\")\n",
     "for path in root.iterdir():\n",
     "    df = pd.read_csv(path, index_col=0)\n",
-    "    pattern = r\"augmentation|label_test|layer_test|correlation|shortcut\"\n",
+    "    pattern = r\"aug|mem|mono|correlation|sc\"\n",
     "    match = re.search(pattern, path.name)\n",
     "    pattern_to_setting = {\n",
-    "        \"augmentation\": \"aug\",\n",
-    "        \"label_test\": \"mem\",\n",
-    "        \"layer_test\": \"mono\",\n",
+    "        \"aug\": \"aug\",\n",
+    "        \"mem\": \"mem\",\n",
+    "        \"mono\": \"mono\",\n",
     "        \"correlation\": \"correlation\",\n",
-    "        \"shortcut\": \"sc\",\n",
+    "        \"sc\": \"sc\",\n",
     "    }\n",
     "    setting = pattern_to_setting[match.group(0)]\n",
     "\n",
@@ -469,7 +469,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vision_data.Dataset.unique()"
+    "# df = pd.read_csv(\"/root/similaritybench/experiments/paper_results/vision/mono_in100_full.csv\", index_col=0)\n",
+    "# df.unstack().reset_index(level=0)\n",
+    "# # df.melt(value_vars=[\"correlation\"] + [f\"correlation.{i}\" for i in range(1, 7)])"
    ]
   },
   {
@@ -947,36 +949,49 @@
    "source": [
     "plot_data = pd.merge(data, avg_ranks).sort_values(by=[\"med_rank\"])\n",
     "for mod in plot_data.Modality.unique():\n",
-    "    # g = sns.catplot(\n",
-    "    #     data=plot_data[plot_data.Modality == mod],\n",
-    "    #     y=\"rank\",\n",
-    "    #     x=\"Sim Meas.\",\n",
-    "    #     hue=\"Modality\",\n",
-    "    #     kind=\"box\",\n",
-    "    #     height=5,\n",
-    "    #     aspect=2,\n",
-    "    #     col=\"Modality\",\n",
-    "    #     palette={\"Language\": \"C1\", \"Vision\": \"C2\", \"Graph\": \"C0\"},\n",
-    "    #     legend=False,\n",
-    "    # )\n",
-    "    # ax = g.axes[0, 0]\n",
-    "    # ax.tick_params(axis=\"x\", labelrotation=40)\n",
-    "    # xlabels = ax.get_xticklabels()\n",
-    "    # ax.set_xticklabels(xlabels, rotation=40, ha=\"right\")\n",
+    "    g = sns.catplot(\n",
+    "        data=plot_data[plot_data.Modality == mod],\n",
+    "        y=\"rank\",\n",
+    "        x=\"Sim Meas.\",\n",
+    "        hue=\"Modality\",\n",
+    "        kind=\"box\",\n",
+    "        height=5,\n",
+    "        aspect=2,\n",
+    "        col=\"Modality\",\n",
+    "        palette={\"Language\": \"C1\", \"Vision\": \"C2\", \"Graph\": \"C0\"},\n",
+    "        legend=False,\n",
+    "    )\n",
+    "    ax = g.axes[0, 0]\n",
+    "    ax.tick_params(axis=\"x\", labelrotation=40)\n",
+    "    xlabels = ax.get_xticklabels()\n",
+    "    ax.set_xticklabels(xlabels, rotation=40, ha=\"right\")\n",
+    "    ax.set_ylabel(\"Rank\")\n",
+    "    ax.set_xlabel(\"Similarity Measures\")\n",
+    "    if mod == \"Graph\":\n",
+    "        ax.set_title(\"Graphs\")\n",
+    "    else:\n",
+    "        ax.set_title(mod)\n",
+    "    g.savefig(f\"../../figs/aggregated_hor_{mod}.pdf\", bbox_inches=\"tight\")\n",
+    "\n",
     "    g = sns.catplot(\n",
     "        data=plot_data[plot_data.Modality == mod],\n",
     "        x=\"rank\",\n",
     "        y=\"Sim Meas.\",\n",
     "        hue=\"Modality\",\n",
     "        kind=\"box\",\n",
-    "        height=10,\n",
-    "        aspect=0.5,\n",
+    "        height=7,\n",
+    "        aspect=0.8,\n",
     "        col=\"Modality\",\n",
     "        palette={\"Language\": \"C1\", \"Vision\": \"C2\", \"Graph\": \"C0\"},\n",
     "        legend=False\n",
     "    )\n",
-    "\n",
-    "    # g.savefig(f\"../../figs/aggregated_hor_{mod}.pdf\", bbox_inches=\"tight\")\n",
+    "    ax = g.axes[0, 0]\n",
+    "    ax.set_xlabel(\"Rank\")\n",
+    "    ax.set_ylabel(\"Similarity Measures\")\n",
+    "    if mod == \"Graph\":\n",
+    "        ax.set_title(\"Graphs\")\n",
+    "    else:\n",
+    "        ax.set_title(mod)\n",
     "    g.savefig(f\"../../figs/aggregated_ver_{mod}.pdf\", bbox_inches=\"tight\")"
    ]
   },
