--- a/configs/language/correlation_nlp_standard_mnli.yaml
+++ b/configs/language/correlation_nlp_standard_mnli.yaml
@@ -1,19 +1,21 @@
 # Holds all information needed to run experiments.
 excluded_measures:
+  # - EigenspaceOverlapScore
   - GeometryScore
   # - IMDScore
-  - LinearRegression
+  # - LinearRegression
 threads: 1
 cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
 experiments:
-  - name: NLP mnli Monotonicity Experiment (Using only CLS Token)
-    type: MonotonicityExperiment # Defines the type of experiment class to use
+  - name: NLP mnli Correlation Experiments
+    type: OutputCorrelationExperiment # Defines the type of experiment class to use
+    use_acc_comparison: True
     representation_dataset: "mnli"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
-        - Augmentation_0  # These models are set to only use the CLS token for representation comparison, but trained on the standard dataset
+        - "Normal"
       train_dataset:
         - "mnli"
       seed:
@@ -22,21 +24,26 @@ experiments:
         - 2
         - 3
         - 4
+        - 5
+        - 6
+        - 7
+        - 8
+        - 9
       domain: NLP
     grouping_keys: # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: mono_nlp_standard_cls_tok_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: correlation_nlp_standard_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: mono_nlp_standard_cls_tok_mnli_full.csv
+  full_df_filename: correlation_nlp_standard_mnli_full.csv
   # ---
-  save_aggregated_df: True
+  save_aggregated_df: False
   row_index: similarity_measure # The key to use as the row index in the table.
   columns: # The keys to use as columns (can be list[str] or a str)
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: mono_nlp_standard_cls_tok_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: nlp_standard_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
