--- a/configs/language/monotonicity_nlp_standard_sst2_cls_tok.yaml
+++ b/configs/language/monotonicity_nlp_standard_sst2_cls_tok.yaml
@@ -1,6 +1,5 @@
 # Holds all information needed to run experiments.
 excluded_measures:
-  # - EigenspaceOverlapScore
   - GeometryScore
   # - IMDScore
   # - LinearRegression
@@ -10,22 +9,14 @@ cache_to_mem: True
 only_extract_reps: False
 rerun_nans: True
 experiments:
-  - name: NLP SST2 Memorization Experiments
-    type: GroupSeparationExperiment # Defines the type of experiment class to use
-    representation_dataset: "sst2_mem_rate0"
+  - name: NLP SST2 Monotonicity Experiment (Using only CLS Token)
+    type: MonotonicityExperiment # Defines the type of experiment class to use
+    representation_dataset: "sst2"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
-        - RandomLabels_0
-        - RandomLabels_25
-        - RandomLabels_50
-        - RandomLabels_75
-        - RandomLabels_100
+        - Augmentation_0 # These models are set to only use the CLS token for representation comparison, but trained on the standard dataset
       train_dataset:
         - "sst2"
-        - "sst2_mem_rate025"
-        - "sst2_mem_rate05"
-        - "sst2_mem_rate075"
-        - "sst2_mem_rate10"
       seed:
         - 0
         - 1
@@ -37,11 +28,11 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: nlp_mem_sst2_v2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: mono_nlp_standard_cls_tok_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: nlp_mem_sst2_full.csv
+  full_df_filename: mono_nlp_standard_cls_tok_sst2_full.csv
   # ---
   save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -49,4 +40,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: nlp_mem_sst2.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: mono_nlp_standard_cls_tok_sst2.csv # Can be [.xlsx / .csv / .tex] file extension
