--- a/configs/language/nlp_shortcuts_mnli.yaml
+++ b/configs/language/nlp_shortcuts_mnli.yaml
@@ -1,31 +1,27 @@
 # Holds all information needed to run experiments.
+# included_measures:
+#   - IMDScore
 excluded_measures:
   # - EigenspaceOverlapScore
   - GeometryScore
-  - IMDScore
+  # - IMDScore
   # - LinearRegression
 threads: 1
 cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
-rerun_nans: True
+# rerun_nans: True
 experiments:
-  - name: NLP mnli Memorization Experiments
+  - name: NLP Short Cut Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
-    representation_dataset: "mnli_mem_rate0"
+    representation_dataset: "mnli_sc_rate0354"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
-      identifier:
-        - RandomLabels_0
-        - RandomLabels_25
-        - RandomLabels_50
-        - RandomLabels_75
-        - RandomLabels_100
       train_dataset:
-        - "mnli"
-        - "mnli_mem_rate025"
-        - "mnli_mem_rate05"
-        - "mnli_mem_rate075"
-        - "mnli_mem_rate10"
+        - "mnli_sc_rate0354"
+        # - "mnli_sc_rate05155"
+        # - "mnli_sc_rate0677"
+        - "mnli_sc_rate08385"
+        - "mnli_sc_rate1"
       seed:
         - 0
         - 1
@@ -37,11 +33,11 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: nlp_mem_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_shortcuts_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: nlp_mem_mnli_full.csv
+  full_df_filename: nlp_sc_mnli_full.csv
   # ---
   save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -49,4 +45,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: nlp_mem_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: nlp_shortcut_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
