--- a/configs/language/aug_mnli_3.yaml
+++ b/configs/language/aug_mnli_3.yaml
@@ -1,27 +1,26 @@
 # Holds all information needed to run experiments.
-# included_measures:
-#   - IMDScore
 excluded_measures:
-  # - EigenspaceOverlapScore
   - GeometryScore
-  # - IMDScore
-  # - LinearRegression
 threads: 1
 cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
-# rerun_nans: True
+rerun_nans: False
 experiments:
-  - name: NLP Short Cut Experiments
+  - name: NLP mnli Augmentation Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
-    representation_dataset: "mnli_sc_rate0354"
+    representation_dataset: "mnli_aug_rate0"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
+      identifier:
+        - Augmentation_0
+        - Augmentation_25
+        - Augmentation_100
       train_dataset:
-        - "mnli_sc_rate0354"
-        # - "mnli_sc_rate05155"
-        # - "mnli_sc_rate0677"
-        - "mnli_sc_rate08385"
-        - "mnli_sc_rate1"
+        - "mnli"
+        - "mnli_aug_rate025"
+        - "mnli_aug_rate05"
+        - "mnli_aug_rate075"
+        - "mnli_aug_rate10"
       seed:
         - 0
         - 1
@@ -33,11 +32,11 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: nlp_shortcuts_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_aug_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: nlp_sc_mnli_full.csv
+  full_df_filename: aug_mnli_3_full.csv
   # ---
   save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -45,4 +44,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: nlp_shortcut_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: aug_mnli_3.csv # Can be [.xlsx / .csv / .tex] file extension
