--- a/configs/language/mem_sst2_3.yaml
+++ b/configs/language/mem_sst2_3.yaml
@@ -1,33 +1,26 @@
 # Holds all information needed to run experiments.
-# included_measures:
-#   - IMDScore
 excluded_measures:
-  # - EigenspaceOverlapScore
   - GeometryScore
-  # - IMDScore
-  # - LinearRegression
 threads: 1
 cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
-# rerun_nans: True
+rerun_nans: False
 experiments:
-  - name: NLP mnli Augmentation Experiments
+  - name: NLP SST2 Memorization Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
-    representation_dataset: "mnli_aug_rate0"
+    representation_dataset: "sst2_mem_rate0"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
-        - Augmentation_0
-        - Augmentation_25
-        # - Augmentation_50
-        # - Augmentation_75
-        - Augmentation_100
+        - RandomLabels_0
+        - RandomLabels_75
+        - RandomLabels_100
       train_dataset:
-        - "mnli"
-        - "mnli_aug_rate025"
-        - "mnli_aug_rate05"
-        - "mnli_aug_rate075"
-        - "mnli_aug_rate10"
+        - "sst2"
+        - "sst2_mem_rate025"
+        - "sst2_mem_rate05"
+        - "sst2_mem_rate075"
+        - "sst2_mem_rate10"
       seed:
         - 0
         - 1
@@ -39,11 +32,11 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: nlp_aug_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_mem_sst2_v2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: nlp_aug_mnli_full.csv
+  full_df_filename: mem_sst2_3_full.csv
   # ---
   save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -51,4 +44,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: nlp_aug_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: mem_sst2_3.csv # Can be [.xlsx / .csv / .tex] file extension
