--- a/configs/language/mem_sst2_3.yaml
+++ b/configs/language/mem_sst2_3.yaml
@@ -32,7 +32,7 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: nlp_mem_sst2_v2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_mem_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
