--- a/graphs/notebooks/explore_train_results.ipynb
+++ b/graphs/notebooks/explore_train_results.ipynb
@@ -61,9 +61,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data_table(experiment, dataset):\n",
+    "def get_data_table(experiment, dataset, architectures = [\"GCN\", \"GraphSAGE\", \"GAT\"]):\n",
     "    data_list = []\n",
-    "    for arch in [\"GCN\", \"GraphSAGE\", \"GAT\"]:\n",
+    "    for arch in architectures:\n",
     "        data_list.append(agg_train_results(experiment, dataset, arch))\n",
     "    res_df = pd.concat(data_list)\n",
     "    res_df = res_df.pivot(index=\"Setting\", columns=[\"Architecture\"])\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,7 @@
        "      <th colspan=\"3\" halign=\"left\">GAT</th>\n",
        "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
        "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">PGNN</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -115,9 +116,15 @@
        "      <th>Train</th>\n",
        "      <th>Val</th>\n",
        "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Setting</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -141,6 +148,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.7284</td>\n",
        "      <td>0.7454</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5064</td>\n",
+       "      <td>0.5246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_25</th>\n",
@@ -153,6 +163,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.7328</td>\n",
        "      <td>0.7390</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5328</td>\n",
+       "      <td>0.5366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_50</th>\n",
@@ -165,6 +178,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.7652</td>\n",
        "      <td>0.7370</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5608</td>\n",
+       "      <td>0.4946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_75</th>\n",
@@ -177,6 +193,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.8232</td>\n",
        "      <td>0.7042</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.6236</td>\n",
+       "      <td>0.4620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_100</th>\n",
@@ -189,6 +208,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.9136</td>\n",
        "      <td>0.6526</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.8012</td>\n",
+       "      <td>0.3214</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -204,28 +226,28 @@
        "Shortcut_75    1.0  0.8260  0.7606   1.0  0.8104  0.7426       1.0  0.8232   \n",
        "Shortcut_100   1.0  0.8748  0.7600   1.0  0.8480  0.7328       1.0  0.9136   \n",
        "\n",
-       "Architecture          \n",
-       "                Test  \n",
-       "Setting               \n",
-       "Shortcut_0    0.7454  \n",
-       "Shortcut_25   0.7390  \n",
-       "Shortcut_50   0.7370  \n",
-       "Shortcut_75   0.7042  \n",
-       "Shortcut_100  0.6526  "
+       "Architecture          PGNN                  \n",
+       "                Test Train     Val    Test  \n",
+       "Setting                                     \n",
+       "Shortcut_0    0.7454   1.0  0.5064  0.5246  \n",
+       "Shortcut_25   0.7390   1.0  0.5328  0.5366  \n",
+       "Shortcut_50   0.7370   1.0  0.5608  0.4946  \n",
+       "Shortcut_75   0.7042   1.0  0.6236  0.4620  \n",
+       "Shortcut_100  0.6526   1.0  0.8012  0.3214  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_data_table(\"shortcut_test\", \"cora\")"
+    "get_data_table(\"shortcut_test\", \"cora\", architectures = [\"GCN\", \"GraphSAGE\", \"GAT\", \"PGNN\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +389,7 @@
        "Shortcut_100  0.999982  0.999104  0.001138  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +542,7 @@
        "Shortcut_100  1.000000  1.000000  0.000416  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -598,8 +620,8 @@
        "      <td>0.7200</td>\n",
        "      <td>0.7422</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.7344</td>\n",
-       "      <td>0.7448</td>\n",
+       "      <td>0.7200</td>\n",
+       "      <td>0.7422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Augmentation_25</th>\n",
@@ -666,14 +688,14 @@
        "Architecture     GraphSAGE                  \n",
        "                     Train     Val    Test  \n",
        "Setting                                     \n",
-       "Normal                 1.0  0.7344  0.7448  \n",
+       "Normal                 1.0  0.7200  0.7422  \n",
        "Augmentation_25        1.0  0.7148  0.7210  \n",
        "Augmentation_50        1.0  0.6808  0.7020  \n",
        "Augmentation_75        1.0  0.6840  0.6856  \n",
        "Augmentation_100       1.0  0.6500  0.6558  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +848,7 @@
        "Augmentation_100  0.775964  0.447831  0.448779  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1001,7 @@
        "Augmentation_100  0.761124  0.709286  0.698274  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1021,9 +1043,13 @@
        "      <th colspan=\"3\" halign=\"left\">GAT</th>\n",
        "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
        "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">PGNN</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
        "      <th>Train</th>\n",
        "      <th>Val</th>\n",
        "      <th>Test</th>\n",
@@ -1045,6 +1071,9 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1057,8 +1086,11 @@
        "      <td>0.7200</td>\n",
        "      <td>0.7422</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.7344</td>\n",
-       "      <td>0.7448</td>\n",
+       "      <td>0.7200</td>\n",
+       "      <td>0.7422</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.4928</td>\n",
+       "      <td>0.5030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomLabels_25</th>\n",
@@ -1071,6 +1103,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.4292</td>\n",
        "      <td>0.4256</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.2976</td>\n",
+       "      <td>0.3136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomLabels_50</th>\n",
@@ -1083,6 +1118,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.2268</td>\n",
        "      <td>0.2326</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1768</td>\n",
+       "      <td>0.1978</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomLabels_75</th>\n",
@@ -1095,6 +1133,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.1436</td>\n",
        "      <td>0.1462</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1464</td>\n",
+       "      <td>0.1410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomLabels_100</th>\n",
@@ -1107,6 +1148,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.1476</td>\n",
        "      <td>0.1552</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1472</td>\n",
+       "      <td>0.1480</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1122,28 +1166,28 @@
        "RandomLabels_75   0.991429  0.1520  0.1472  0.991429  0.1472  0.1514   \n",
        "RandomLabels_100  0.988571  0.1500  0.1636  0.984286  0.1504  0.1616   \n",
        "\n",
-       "Architecture     GraphSAGE                  \n",
-       "                     Train     Val    Test  \n",
-       "Setting                                     \n",
-       "Normal                 1.0  0.7344  0.7448  \n",
-       "RandomLabels_25        1.0  0.4292  0.4256  \n",
-       "RandomLabels_50        1.0  0.2268  0.2326  \n",
-       "RandomLabels_75        1.0  0.1436  0.1462  \n",
-       "RandomLabels_100       1.0  0.1476  0.1552  "
+       "Architecture     GraphSAGE                  PGNN                  \n",
+       "                     Train     Val    Test Train     Val    Test  \n",
+       "Setting                                                           \n",
+       "Normal                 1.0  0.7200  0.7422   1.0  0.4928  0.5030  \n",
+       "RandomLabels_25        1.0  0.4292  0.4256   1.0  0.2976  0.3136  \n",
+       "RandomLabels_50        1.0  0.2268  0.2326   1.0  0.1768  0.1978  \n",
+       "RandomLabels_75        1.0  0.1436  0.1462   1.0  0.1464  0.1410  \n",
+       "RandomLabels_100       1.0  0.1476  0.1552   1.0  0.1472  0.1480  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_data_table(\"label_test\", \"cora\")"
+    "get_data_table(\"label_test\", \"cora\", architectures = [\"GCN\", \"GraphSAGE\", \"GAT\", \"PGNN\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1329,7 @@
        "RandomLabels_100  0.982889  0.151470  0.151992  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1482,7 @@
        "RandomLabels_100  0.270413  0.026209  0.025435  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1480,9 +1524,13 @@
        "      <th colspan=\"3\" halign=\"left\">GAT</th>\n",
        "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
        "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">PGNN</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
        "      <th>Train</th>\n",
        "      <th>Val</th>\n",
        "      <th>Test</th>\n",
@@ -1504,6 +1552,9 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1516,8 +1567,11 @@
        "      <td>0.720</td>\n",
        "      <td>0.7422</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.7344</td>\n",
-       "      <td>0.7448</td>\n",
+       "      <td>0.7200</td>\n",
+       "      <td>0.7422</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.4928</td>\n",
+       "      <td>0.5030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MultiLayer</th>\n",
@@ -1530,6 +1584,9 @@
        "      <td>1.0</td>\n",
        "      <td>0.6428</td>\n",
        "      <td>0.6714</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5316</td>\n",
+       "      <td>0.5208</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1542,25 +1599,25 @@
        "Normal        1.000000  0.7516  0.7602  1.000000  0.720  0.7422       1.0   \n",
        "MultiLayer    0.972857  0.6756  0.6922  0.997143  0.668  0.6860       1.0   \n",
        "\n",
-       "Architecture                  \n",
-       "                 Val    Test  \n",
-       "Setting                       \n",
-       "Normal        0.7344  0.7448  \n",
-       "MultiLayer    0.6428  0.6714  "
+       "Architecture                  PGNN                  \n",
+       "                 Val    Test Train     Val    Test  \n",
+       "Setting                                             \n",
+       "Normal        0.7200  0.7422   1.0  0.4928  0.5030  \n",
+       "MultiLayer    0.6428  0.6714   1.0  0.5316  0.5208  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_data_table(\"layer_test\", \"cora\")"
+    "get_data_table(\"layer_test\", \"cora\", architectures = [\"GCN\", \"GraphSAGE\", \"GAT\", \"PGNN\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1717,7 @@
        "MultiLayer    0.767081  0.500726  0.501779  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1828,7 @@
        "MultiLayer    0.789444  0.703238  0.677065  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
