--- a/configs/language/aug_mnli_bert_mean.yaml
+++ b/configs/language/aug_mnli_bert_mean.yaml
@@ -8,20 +8,20 @@ only_extract_reps: false
 rerun_nans: false
 only_eval: false
 experiments:
-- name: NLP SST2 Memorization Experiments
+- name: NLP mnli Augmentation Experiments
   type: GroupSeparationExperiment   # Defines the type of experiment class to use
-  representation_dataset: "sst2_mem_rate0"
+  representation_dataset: "mnli_aug_rate0"
   filter_key_vals:   # Only keeps models that have any of the values for the keys.
     identifier:
-    - RandomLabels_0
-    - RandomLabels_75
-    - RandomLabels_100
+    - Augmentation_0
+    - Augmentation_25
+    - Augmentation_100
     train_dataset:
-    - "sst2"
-    - "sst2_mem_rate025"
-    - "sst2_mem_rate05"
-    - "sst2_mem_rate075"
-    - "sst2_mem_rate10"
+    - "mnli"
+    - "mnli_aug_rate025"
+    - "mnli_aug_rate05"
+    - "mnli_aug_rate075"
+    - "mnli_aug_rate10"
     seed:
     - 0
     - 1
@@ -30,18 +30,18 @@ experiments:
     - 4
     domain: NLP
     token_pos:
-    - 0
+    - "mean"
     architecture:
     - BERT-L
   grouping_keys:   # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
   - train_dataset
   separation_keys:   # Creates a separate experiment for each unique value of the key.
   - architecture
-raw_results_filename: nlp_mem_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_aug_mnli_bert_meanpooled.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: true
-  full_df_filename: mem_sst2_bert_cls.csv
+  full_df_filename: aug_mnli_bert_mean.csv
   # ---
   save_aggregated_df: true
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -49,4 +49,4 @@ table_creation:
   - quality_measure
   - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: mem_sst2_3.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: aug_mnli_3.csv # Can be [.xlsx / .csv / .tex] file extension
