--- a/configs/language/monotonicity_nlp_standard_mnli_cls_tok_mean.yaml
+++ b/configs/language/monotonicity_nlp_standard_mnli_cls_tok_mean.yaml
@@ -8,20 +8,14 @@ only_extract_reps: false
 rerun_nans: false
 only_eval: false
 experiments:
-- name: NLP SST2 Memorization Experiments
-  type: GroupSeparationExperiment   # Defines the type of experiment class to use
-  representation_dataset: "sst2_mem_rate0"
+- name: NLP mnli Monotonicity Experiment (Using only CLS Token)
+  type: MonotonicityExperiment   # Defines the type of experiment class to use
+  representation_dataset: "mnli"
   filter_key_vals:   # Only keeps models that have any of the values for the keys.
     identifier:
-    - RandomLabels_0
-    - RandomLabels_75
-    - RandomLabels_100
+    - Augmentation_0      # These models are set to only use the CLS token for representation comparison, but trained on the standard dataset
     train_dataset:
-    - "sst2"
-    - "sst2_mem_rate025"
-    - "sst2_mem_rate05"
-    - "sst2_mem_rate075"
-    - "sst2_mem_rate10"
+    - "mnli"
     seed:
     - 0
     - 1
@@ -30,18 +24,16 @@ experiments:
     - 4
     domain: NLP
     token_pos:
-    - 0
-    architecture:
-    - BERT-L
+    - "mean"
   grouping_keys:   # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
   - train_dataset
   separation_keys:   # Creates a separate experiment for each unique value of the key.
   - architecture
-raw_results_filename: nlp_mem_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: mono_nlp_standard_cls_tok_mnli_meanpooled.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: true
-  full_df_filename: mem_sst2_bert_cls.csv
+  full_df_filename: mono_nlp_standard_mnli_bertAndAlbert_mean.csv
   # ---
   save_aggregated_df: true
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -49,4 +41,4 @@ table_creation:
   - quality_measure
   - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: mem_sst2_3.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: mono_nlp_standard_cls_tok_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
