--- a/configs/language/sc_sst2_3_albert.yaml
+++ b/configs/language/sc_sst2_3_albert.yaml
@@ -8,20 +8,14 @@ only_extract_reps: false
 rerun_nans: false
 only_eval: false
 experiments:
-- name: NLP SST2 Memorization Experiments
+- name: NLP Short Cut Experiments
   type: GroupSeparationExperiment   # Defines the type of experiment class to use
-  representation_dataset: "sst2_mem_rate0"
+  representation_dataset: "sst2_sc_rate0558"
   filter_key_vals:   # Only keeps models that have any of the values for the keys.
-    identifier:
-    - RandomLabels_0
-    - RandomLabels_75
-    - RandomLabels_100
     train_dataset:
-    - "sst2"
-    - "sst2_mem_rate025"
-    - "sst2_mem_rate05"
-    - "sst2_mem_rate075"
-    - "sst2_mem_rate10"
+    - "sst2_sc_rate0558"
+    - "sst2_sc_rate0889"
+    - "sst2_sc_rate10"
     seed:
     - 0
     - 1
@@ -29,19 +23,15 @@ experiments:
     - 3
     - 4
     domain: NLP
-    token_pos:
-    - 0
-    architecture:
-    - BERT-L
   grouping_keys:   # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
   - train_dataset
   separation_keys:   # Creates a separate experiment for each unique value of the key.
   - architecture
-raw_results_filename: nlp_mem_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_shortcuts_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: true
-  full_df_filename: mem_sst2_bert_cls.csv
+  full_df_filename: sc_sst2_3_full.csv
   # ---
   save_aggregated_df: true
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -49,4 +39,4 @@ table_creation:
   - quality_measure
   - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: mem_sst2_3.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: sc_sst2_3.csv # Can be [.xlsx / .csv / .tex] file extension
